--- a/css/styles.css
+++ b/css/styles.css
@@ -70,11 +70,11 @@ img {
 
 /* header */
 
-.header-content {
+.header__content {
     border-bottom: 1px solid var(--main-border-color);
 }
 
-.header-content .logo {
+.header__content .logo {
 
     font-family: 'Raleway';
     font-weight: 700;
@@ -90,12 +90,12 @@ img {
 }
 
 
-.logo-web {
+.logo--web {
     color: var(--first-logo-color);
     
 }
 
-.header-nav {
+.header__nav {
     display: flex;
     margin-right: auto;
  
@@ -103,31 +103,31 @@ img {
     }
 
 
-.container.nav {
+.container__nav {
     display: flex;
     align-items: center;
 }
 
 
-.header-link {
+.header__link {
     align-items: center;
     display: flex;
     
 }
 
-.header-link,
-.contact-link {
+.header__link,
+.contact__link {
     list-style: none;
 }
 
 
-.header-content .link:hover,
-.header-content .link:focus{
+.header__content .link:hover,
+.header__content .link:focus{
     color: var(--link-color);
 }
 
 
-.header-link .link {
+.header__link .link {
     display: block;
     text-decoration: none;
     font-weight: 500;
@@ -143,20 +143,20 @@ img {
 }
 
 
-.header-link .link.current {
+.header__link .link__current {
     color: var(--link-color);
     
 }
 
-.header-link>.item.item:nth-child(-n+2) {
+.header__link>.item.item:nth-child(-n+2) {
     margin-right: 50px;
 }
 
-.item.is-active {
+.item.is--active {
     position: relative;
   }
 
-.contact-link {
+.contact__link {
     display: flex;
     padding-left: 0px;
     margin: 0px;
@@ -164,7 +164,7 @@ img {
 
    }
 
-.contact-link .link {
+.contact__link .link {
     display: block;
     text-decoration: none;
     font-weight: 500;
@@ -176,11 +176,11 @@ img {
     
 }
 
-.contact-link>.item.item:nth-child(1) {
+.contact__link>.item.item:nth-child(1) {
     margin-right: 50px;
 }
 
-.icon-mail {
+.icon__mail {
     vertical-align: -1px;
 
     width: 16px;
@@ -191,7 +191,7 @@ img {
 }
 
   
-  .icon-tel {
+  .icon__tel {
     vertical-align: bottom;
 
     width: 10px;
@@ -201,7 +201,7 @@ img {
     fill: currentColor;
 }
 
-.link.current::after {
+.link__current::after {
     position: absolute;
     content: '';
   
@@ -248,7 +248,7 @@ img {
 }
 
 
-.buttons .button {
+.buttons .portfolio__button {
     cursor: pointer;
     text-decoration: none;
     font-family: inherit;
@@ -269,8 +269,8 @@ img {
 }
 
 
-.buttons .button:hover,
-.buttons .button:focus {
+.portfolio__button:hover,
+.portfolio__button:focus {
     background-color: var(--link-color);
     color: var(--secondary-text-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
@@ -279,7 +279,7 @@ img {
 
 }
 
-.buttons .button.active {
+.buttons .portfolio__button.active {
     background-color: var(--link-color);
         color: var(--secondary-text-color);
 }
@@ -323,27 +323,27 @@ img {
 
 
 
-.project-list {
+.project__list {
     list-style: none;
     display: flex;
     flex-wrap: wrap;
 }
 
-.project-card {
+.project__card {
  width: 370px;
 }
 
-.project-card:nth-child(-n + 6) {
+.project__card:nth-child(-n + 6) {
     margin-bottom: 30px;
 }
 
 
-.project-card:nth-child(3n + 2) {
+.project__card:nth-child(3n + 2) {
     margin-left: 30px;
     margin-right: 30px;
 }
 
-.project-title {
+.project__title {
     margin-bottom: 4px;
     margin-right: auto;
     font-size: 18px;
@@ -352,36 +352,36 @@ img {
     color: var(--title-text-color);
 }
 
-.project-box {
+.project__box {
     padding: 20px 24px;
     border: 1px solid var(--secondary-border-color);
     border-top: none;
 }
 
-.project-text {
+.project__text {
     margin-right: auto;
     font-size: 16px;
     line-height: 1.87;
     color: var(--primary-text-color); 
 }
 
-.project-shadow:hover,
-.project-shadow:focus {
+.project__shadow:hover,
+.project__shadow:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.project-shadow {
+.project__shadow {
     display: block;
     cursor: pointer;
 }
-.project-slider {
+.project__slider {
     position: relative;
     overflow: hidden;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
-  .project-desc {
+  .project__desc {
     position: absolute;
   
     width: 100%;
@@ -404,10 +404,11 @@ img {
     background-color: rgba(33, 150, 243, 0.9);
   
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   }
   
-  .project-card:hover .project-desc,
-  .project-card:focus .project-desc {
+  .project__card:hover .project__desc,
+  .project__card:focus .project__desc {
     transform: translateY(0);
   }
 
@@ -428,7 +429,7 @@ img {
   
 }
 
-.hero .hero-title {
+.hero .hero__title {
     margin-bottom: 30px;
     font-weight: 900;
     font-size: 44px;
@@ -441,7 +442,7 @@ img {
 }
 
 
-.hero .hero-button {
+.hero .hero__button {
     cursor: pointer;
     font-weight: 700;
     font-size: 16px;
@@ -464,8 +465,8 @@ img {
 }
 
 
-.hero-button:hover,
-.hero-button:focus {
+.hero__button:hover,
+.hero__button:focus {
     background-color: #188ce8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
@@ -473,12 +474,12 @@ img {
 
 /* skills */
 
-.skill-list {
+.skill__list {
     list-style: none;
     display: flex;
 }
 
-.skill-box::before {
+.skill__box::before {
     content: '';
     display: inline-block;
     width: 270px;
@@ -495,31 +496,31 @@ img {
   }
   
   
-  .skill-box:nth-child(1)::before {
+  .skill__box:nth-child(1)::before {
     background-image: url(../images/antenna.svg);
   }
   
   
-  .skill-box:nth-child(2)::before {
+  .skill__box:nth-child(2)::before {
     background-image: url(../images/clock.svg);
   }
   
   
-  .skill-box:nth-child(3)::before {
+  .skill__box:nth-child(3)::before {
     background-image: url(../images/diagram.svg);
   }
   
   
-  .skill-box:nth-child(4)::before {
+  .skill__box:nth-child(4)::before {
     background-image: url(../images/astronaut.svg);
   }
   
 
-.skill-box:not(:last-child) {
+.skill__box:not(:last-child) {
     margin-right: 30px;
 }
 
-.skill-list .skill-title {
+.skill__list .skill__title {
     margin-bottom: 10px;
 
     font-size: 14px;
@@ -530,14 +531,14 @@ img {
 }
 
 
-.skill-list .skill-text {
+.skill__list .skill__text {
      
     line-height: 1.71;
 
    }
+/* our works */
 
-
-.work-title {
+.work__title {
        
     font-weight: 700;
        font-size: 36px;
@@ -549,11 +550,11 @@ img {
        color: var(--title-text-color);
    }
 
-   .work-list {
+   .work__list {
     position: relative;
   }
   
-  .work-text {
+  .work__text {
     position: absolute;
   
     display: flex;
@@ -573,26 +574,26 @@ img {
     background: rgba(47, 48, 58, 0.8);
   }
 
-/* works */
+
 
 .section.work {
     padding-top: 0;
 }
 
-.work-list {
+.work__list {
     list-style: none;
     display: flex;
 }
-.work-image:nth-child(2) {
+.work__image:nth-child(2) {
     margin-right: 30px;
     margin-left: 30px;
 }
 
-  .work-serv {
+  .work__serv {
     position: relative;
   }
   
-  .work-text {
+  .work__text {
     position: absolute;
   
     display: flex;
@@ -621,28 +622,28 @@ img {
 }
 
 
-.team .team-list {
+.team .team__list {
     list-style: none;
     display: flex;
 }
 
-.team-worker {
+.team__worker {
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     background-color: var(--secondary-text-color);
 }
 
-.team-worker:nth-child(-n + 3) {
+.team__worker:nth-child(-n + 3) {
     margin-right: 30px;
 }
 
-.team-context {
+.team__context {
     padding-top: 30px;
     padding-bottom: 30px;
 }
 
-.team .team-title {
+.team .team__title {
     margin-bottom: 50px;
     font-weight: 700;
     font-size: 36px;
@@ -654,7 +655,7 @@ img {
 
 
 
-.team .team-name {
+.team .team__name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
@@ -666,7 +667,7 @@ img {
 }
 
 
-.team .team-job {
+.team .team__job {
     
     font-size: 16px;
     line-height: 1.18;
@@ -677,7 +678,7 @@ img {
     
 }
 
-.team-social-icons {
+.team__icons {
     display: flex;
     
     height: 44px;
@@ -688,7 +689,7 @@ img {
     
   }
 
-  .social-link-icon {
+  .social-link__icon {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -701,22 +702,22 @@ img {
     
     
   }
-  .social-icon {
+  .social__icon {
     fill: currentColor;
   }
-  .social-link-icon:hover,
-  .social-link-icon:focus {
+  .social-link__icon:hover,
+  .social-link__icon:focus {
     background-color: #2196f3;
     color: #ffffff;
   }
 
-  .icon-social:not(:last-child) {
+  .icon__social:not(:last-child) {
     margin-right: 10px;
   }
 
   /*our clients*/
 
-  .clients-icon-list {
+  .clients-icon__list {
     display: flex;
     font-size: 36px;
     line-height: 1.16;
@@ -725,11 +726,11 @@ img {
     padding: 0;
     text-align: center;
   }
-  .clients-icon-item:not(:last-child) {
+  .clients-icon__item:not(:last-child) {
     margin-right: 30px;
   }
 
-  .clients-icon-link {
+  .clients-icon__link {
     display: flex;
     box-sizing: border-box;
     justify-content: center;
@@ -742,11 +743,12 @@ img {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .clients-icon {
+  .clients__icon {
     fill: currentColor;
   }
-  .clients-icon-link:hover,
-  .clients-icon-link:focus {
+  .clients-icon__link:hover,
+  .clients-icon__link:focus 
+  {
     color: var(--link-color);
     background-color: var(--secondary-text-color);
     border-color: var(--link-color);
@@ -757,17 +759,17 @@ img {
 /* footer */
 
 
-.footer-link {
+.footer__link {
     list-style: none;
 }
-.footer-content {
+.footer__content {
     padding-top: 60px;
     padding-bottom: 60px;
     background-color: var(--first-bcg-color);
     display: flex
 }
 
-.footer-container {
+.footer__container {
     width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
@@ -777,18 +779,18 @@ img {
 
 
 
-.footer-link .link:hover,
-.footer-link .link:focus {
+.footer__link .link:hover,
+.footer__link .link:focus {
     color: var(--link-color);
 }
 
 
-.address {
+.footer__address {
     font-style: normal;
     }
 
 
-.footer-link .link {
+.footer__link .link {
     text-decoration: none;
    display: flex;
     
@@ -797,11 +799,11 @@ img {
     color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-link>.item:nth-child(-n + 2) {
+.footer__link>.item:nth-child(-n + 2) {
     margin-bottom: 9px;;
 }
 
-.map-link {
+.map__link {
     text-decoration: none;
     font-weight: 400;
     font-size: 14px;
@@ -814,12 +816,12 @@ img {
 
 
 
-.footer-content {
+.footer__content {
     background-color: var(--first-bcg-color);
 }
 
 
-.footer-content .logo {
+.footer__content .logo {
     font-family: 'Raleway';
     font-weight: 700;
     font-size: 26px;
@@ -836,10 +838,15 @@ img {
     color: var(--secondary-text-color);
   }
   
-.footer-social-thumb {
+.social {
     margin-left: 70px;
   }
-  .footer-social-title {
+
+  .social__list {
+    display: flex;
+  }
+
+  .social__title {
     font-weight: 700;
     
     font-size: 14px;
@@ -848,47 +855,43 @@ img {
     margin-bottom: 20px;
     text-transform: uppercase;
   }
-  .footer-social-links {
-    display: flex;
-    width: 206px;
-    height: 44px;
-    align-items: baseline;
-    padding: 0;
-    justify-content: center;
-    color: var(--secondary-text-color);
-    
-  }
-  .footer-link-icon {
+  
+  .social__link {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    color: var(----main-icon-color); 
+    color: var(--secondary-text-color); 
     background-color: rgba(255, 255, 255, 0.1);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
       }  
       
-    .footer-social-link:not(:last-child) {
+    .social__item:not(:last-child) {
     margin-right: 10px;
   }
-  .footer-link-icon:hover,
-  .footer-link-icon:focus {
+
+  .social__icon {
+    fill: currentcolor;
+  }
+
+  .social__link:hover,
+  .social__link:focus {
     background-color: #2196f3;
     color: var(--secondary-text-color);
   }
 
   /* footer form subscribe */
 
-.form-container {
+.form__container {
   display: flex;
   flex-direction: column;
   margin-left: auto;
 }
 
-.subscribe-input {
+.subscribe__input {
   width: 358px;
 
   padding: 15px 16px;
@@ -907,11 +910,11 @@ img {
   color: var(--secondary-text-color);
 }
 
-.subscribe-label:focus-within .subscribe-input {
+.subscribe__label:focus-within .subscribe__input {
   outline: none;
 }
 
-.subscribe-button {
+.subscribe__button {
   cursor: pointer;
 
   margin-left: 12px;
@@ -931,7 +934,7 @@ img {
   border: none;
 }
 
-.subscribe-icon {
+.subscribe__icon {
   vertical-align: middle;
   margin-left: 10px;
   width: 24px;
@@ -975,7 +978,7 @@ img {
     border-radius: 4px;
   }
 
-  .modal-button {
+  .modal__button {
     position: absolute;
     top: 0;
     right: 0;
@@ -995,8 +998,8 @@ img {
     
   }
 
-  .modal-button:hover,
-.modal-button:focus {
+  .modal__button:hover,
+.modal__button:focus {
 
   fill: var(--link-color);
 
@@ -1004,13 +1007,13 @@ img {
   
   /* modal form */
 
-.modal-form {
+.modal__form {
   display: block;
   width: 448px;
   margin-top: 12px;
 }
 
-.modal-title {
+.modal__title {
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -1020,7 +1023,7 @@ img {
   color: var(--title-text-color);
 }
 
-.signup-label {
+.signup__label {
   position: relative;
 
   margin-bottom: 10px;
@@ -1036,7 +1039,7 @@ img {
   letter-spacing: 0.01em;
 }
 
-.signup-input {
+.signup__input {
   width: 100%;
   padding: 12px 42px;
   margin-top: 4px;
@@ -1046,18 +1049,18 @@ img {
   display: block;
 }
 
-.signup-label:focus-within .signup-input,
-.signup-label:hover .signup-input {
+.signup__label:focus-within .signup__input,
+.signup__label:hover .signup__input {
   border-color: var(--link-color);
   outline: none;
 }
 
-.signup-label:hover .signup-icon,
-.signup-label:focus-within .signup-icon {
+.signup__label:hover .signup__icon,
+.signup__label:focus-within .signup__icon {
   fill: var(--link-color);
 }
 
-.signup-icon {
+.signup__icon {
   position: absolute;
   top: 50%;
   left: 12px;
@@ -1069,16 +1072,16 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.signup-comment {
+.signup__comment {
   margin-bottom: 20px;
 }
 
-.signup-text {
+.signup__text {
   padding: 12px 16px;
   resize: none;
 }
 
-.signup-text::placeholder {
+.signup__text::placeholder {
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
@@ -1087,18 +1090,18 @@ img {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.policy-label {
+.policy__label {
   position: relative;
   font-weight: 400;
 
   line-height: 1.71;
 }
 
-.policy-input {
+.policy__input {
   appearance: none;
 }
 
-.policy-input:checked + .policy-icon {
+.policy__input:checked + .policy__icon {
   background-image: url(../images/icon-check-1.svg);
   background-color: var(--link-color);
   border-color: var(--link-color);
@@ -1109,7 +1112,7 @@ img {
 }
 
 
-.policy-icon {
+.policy__icon {
   position: absolute;
   display: inline-block;
   cursor: pointer;
@@ -1123,7 +1126,7 @@ img {
   transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.policy-link {
+.policy__link {
   cursor: pointer;
   font-weight: 400;
 
@@ -1134,7 +1137,7 @@ img {
   color: var(--first-logo-color);
 }
 
-.form-button {
+.form__button {
   cursor: pointer;
   font-weight: 700;
   font-size: 16px;
@@ -1156,8 +1159,8 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-button:hover,
-.form-button:focus {
+.form__button:hover,
+.form__button:focus {
   background-color: var(--link-bg-color);
 }
  
