створив та переніс фрагменти стилів

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,22 @@
-body{
-    background-color: #fff;
-}
+@import "./utils/vars";
+@import "./base/common";
+@import "./base/reset";
+@import "./components/container";
+@import "./components/section";
+@import "./components/logo";
+@import "./layouts/header";
+@import "./utils/visually-hidden.scss";
+@import "./components/port_buttons.scss";
+@import "./components/project_section.scss";
+@import "./components/section_hero.scss";
+@import "./components/section_skills.scss";
+@import "./components/section_work.scss";
+@import "./components/section_team";
+@import "./components/clients";
+@import "./layouts/footer";
+@import "./layouts/footer_subscribe";
+@import "./components/modal/modal";
+@import "./components/modal/backdrop";
+
+
+
