--- a/css/styles.css
+++ b/css/styles.css
@@ -70,11 +70,11 @@ img {
 
 /* header */
 
-.header__content {
+.header {
     border-bottom: 1px solid var(--main-border-color);
 }
 
-.header__content .logo {
+.header .logo {
 
     font-family: 'Raleway';
     font-weight: 700;
@@ -103,7 +103,7 @@ img {
     }
 
 
-.container__nav {
+.header__container {
     display: flex;
     align-items: center;
 }
@@ -121,8 +121,8 @@ img {
 }
 
 
-.header__content .link:hover,
-.header__content .link:focus{
+.header .link:hover,
+.header .link:focus{
     color: var(--link-color);
 }
 
