--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,6 @@ img {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-  /* identical to box height */
   letter-spacing: 0.03em;
   text-decoration: none;
   color: var(--second-logo-color);
@@ -115,10 +114,6 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.header__link,
-.contact__link {
   list-style: none;
 }
 
@@ -162,6 +157,10 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  list-style: none;
+}
+.contact__link > .item.item:nth-child(1) {
+  margin-right: 50px;
 }
 
 .contact__link .link {
@@ -175,10 +174,6 @@ img {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contact__link > .item.item:nth-child(1) {
-  margin-right: 50px;
 }
 
 .icon__mail {
@@ -232,7 +227,6 @@ img {
           justify-content: center;
   margin-bottom: 50px;
 }
-
 .buttons > .item:nth-child(n+2) {
   margin-left: 8px;
 }
@@ -318,11 +312,9 @@ img {
 .project__card {
   width: 370px;
 }
-
 .project__card:nth-child(-n+6) {
   margin-bottom: 30px;
 }
-
 .project__card:nth-child(3n+2) {
   margin-left: 30px;
   margin-right: 30px;
@@ -350,15 +342,13 @@ img {
   color: var(--primary-text-color);
 }
 
-.project__shadow:hover,
-.project__shadow:focus {
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 .project__shadow {
   display: block;
   cursor: pointer;
+}
+.project__shadow:hover, .project__shadow:focus {
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .project__slider {
@@ -512,43 +502,10 @@ img {
 
 .work__list {
   position: relative;
-}
-
-.work__text {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  min-height: 70px;
-  font-weight: 700;
-  line-height: 1.14px;
-  text-transform: uppercase;
-  color: var(--secondary-text-color);
-  background: rgba(47, 48, 58, 0.8);
-}
-
-.section.work {
-  padding-top: 0;
-}
-
-.work__list {
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.work__image:nth-child(2) {
-  margin-right: 30px;
-  margin-left: 30px;
-}
-
-.work__serv {
-  position: relative;
 }
 
 .work__text {
@@ -573,6 +530,19 @@ img {
   background: rgba(47, 48, 58, 0.8);
 }
 
+.section.work {
+  padding-top: 0;
+}
+
+.work__image:nth-child(2) {
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+.work__serv {
+  position: relative;
+}
+
 .team {
   background-color: var(--second-bcg-color);
 }
@@ -590,7 +560,6 @@ img {
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: var(--secondary-text-color);
 }
-
 .team__worker:nth-child(-n+3) {
   margin-right: 30px;
 }
@@ -614,7 +583,6 @@ img {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
-  /* identical to box height */
   text-align: center;
   color: var(--title-text-color);
   margin-top: 0;
@@ -624,7 +592,6 @@ img {
 .team .team__job {
   font-size: 16px;
   line-height: 1.18;
-  /* identical to box height */
   text-align: center;
 }
 
@@ -657,15 +624,13 @@ img {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.social-link__icon:hover, .social-link__icon:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+}
 
 .social__icon {
   fill: currentColor;
-}
-
-.social-link__icon:hover,
-.social-link__icon:focus {
-  background-color: #2196f3;
-  color: #ffffff;
 }
 
 .icon__social:not(:last-child) {
@@ -688,6 +653,10 @@ img {
   margin-right: 30px;
 }
 
+.clients__icon {
+  fill: currentColor;
+}
+
 .clients-icon__link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -708,13 +677,7 @@ img {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.clients__icon {
-  fill: currentColor;
-}
-
-.clients-icon__link:hover,
-.clients-icon__link:focus {
+.clients-icon__link:hover, .clients-icon__link:focus {
   color: var(--link-color);
   background-color: var(--secondary-text-color);
   border-color: var(--link-color);
@@ -722,6 +685,9 @@ img {
 
 .footer__link {
   list-style: none;
+}
+.footer__link .link:hover, .footer__link.link:focus {
+  color: var(--link-color);
 }
 
 .footer__content {
@@ -743,11 +709,6 @@ img {
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
-}
-
-.footer__link .link:hover,
-.footer__link .link:focus {
-  color: var(--link-color);
 }
 
 .footer__address {
@@ -780,7 +741,7 @@ img {
   background-color: var(--first-bcg-color);
 }
 
-.footer__content .logo {
+.footer__content .footer__logo {
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
@@ -947,13 +908,10 @@ img {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-
-.modal__button:hover,
-.modal__button:focus {
+.modal__button:hover, .modal__button:focus {
   fill: var(--link-color);
 }
 
-/* modal form */
 .modal__form {
   display: block;
   width: 448px;
@@ -1020,7 +978,6 @@ img {
   padding: 12px 16px;
   resize: none;
 }
-
 .signup__text::-webkit-input-placeholder {
   font-weight: 400;
   font-size: 14px;
@@ -1028,7 +985,6 @@ img {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .signup__text::-moz-placeholder {
   font-weight: 400;
   font-size: 14px;
@@ -1036,7 +992,6 @@ img {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .signup__text:-ms-input-placeholder {
   font-weight: 400;
   font-size: 14px;
@@ -1044,7 +999,6 @@ img {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .signup__text::-ms-input-placeholder {
   font-weight: 400;
   font-size: 14px;
@@ -1052,7 +1006,6 @@ img {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .signup__text::placeholder {
   font-weight: 400;
   font-size: 14px;
@@ -1123,9 +1076,7 @@ img {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.form__button:hover,
-.form__button:focus {
+.form__button:hover, .form__button:focus {
   background-color: var(--link-bg-color);
 }
 
