--- a/sass/components/_port_buttons.scss
+++ b/sass/components/_port_buttons.scss
@@ -3,10 +3,10 @@
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
-}
 
-.buttons>.item:nth-child(n + 2) {
-    margin-left: 8px;
+    &>.item:nth-child(n + 2) {
+        margin-left: 8px;
+    }
 }
 
 
