--- a/sass/components/_project_section.scss
+++ b/sass/components/_project_section.scss
@@ -6,17 +6,19 @@
 
 .project__card {
  width: 370px;
-}
 
-.project__card:nth-child(-n + 6) {
+ &:nth-child(-n + 6) {
     margin-bottom: 30px;
 }
 
 
-.project__card:nth-child(3n + 2) {
+&:nth-child(3n + 2) {
     margin-left: 30px;
     margin-right: 30px;
 }
+}
+
+
 
 .project__title {
     margin-bottom: 4px;
@@ -40,16 +42,18 @@
     color: var(--primary-text-color); 
 }
 
-.project__shadow:hover,
-.project__shadow:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 .project__shadow {
     display: block;
     cursor: pointer;
+
+    &:hover,
+    &:focus {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 }
+
+
 .project__slider {
     position: relative;
     overflow: hidden;
