--- a/sass/components/_section_team.scss
+++ b/sass/components/_section_team.scss
@@ -2,7 +2,6 @@
     background-color: var(--second-bcg-color);
 }
 
-
 .team .team__list {
     list-style: none;
     display: flex;
@@ -13,11 +12,12 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     background-color: var(--secondary-text-color);
+
+    &:nth-child(-n + 3) {
+        margin-right: 30px;
+    }
 }
 
-.team__worker:nth-child(-n + 3) {
-    margin-right: 30px;
-}
 
 .team__context {
     padding-top: 30px;
@@ -40,7 +40,6 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
-    /* identical to box height */
     text-align: center;
     color: var(--title-text-color);
     margin-top: 0;
@@ -52,19 +51,14 @@
     
     font-size: 16px;
     line-height: 1.18;
-    /* identical to box height */
-
-
     text-align: center;
     
 }
 
 .team__icons {
     display: flex;
-    
     height: 44px;
     margin-top: 20px;
-    
     padding: 0;
     justify-content: center;
     
@@ -81,16 +75,17 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
-    
-  }
-  .social__icon {
-    fill: currentColor;
-  }
-  .social-link__icon:hover,
-  .social-link__icon:focus {
+    &:hover,
+  &:focus {
     background-color: #2196f3;
     color: #ffffff;
   }
+  }
+
+  .social__icon {
+    fill: currentColor;
+  }
+  
 
   .icon__social:not(:last-child) {
     margin-right: 10px;
