--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,22 +1,23 @@
 @import "./utils/vars";
+@import "./utils/visually-hidden.scss";
 @import "./base/common";
 @import "./base/reset";
 @import "./components/container";
-@import "./components/section";
 @import "./components/logo";
-@import "./layouts/header";
-@import "./utils/visually-hidden.scss";
-@import "./components/port_buttons.scss";
-@import "./components/project_section.scss";
-@import "./components/section_hero.scss";
-@import "./components/section_skills.scss";
-@import "./components/section_work.scss";
-@import "./components/section_team";
-@import "./components/clients";
-@import "./layouts/footer";
-@import "./layouts/footer_subscribe";
 @import "./components/modal/modal";
 @import "./components/modal/backdrop";
+@import "./components/port_buttons.scss";
+@import "./layouts/header";
+@import "./layouts/section";
+@import "./layouts/project_section.scss";
+@import "./layouts/section_hero.scss";
+@import "./layouts/section_skills.scss";
+@import "./layouts/section_work.scss";
+@import "./layouts/section_team";
+@import "./layouts/clients";
+@import "./layouts/footer";
+@import "./layouts/footer_subscribe";
+
 
 
 
