переніс section до components

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,12 +3,12 @@
 @import "./base/common";
 @import "./base/reset";
 @import "./components/container";
+@import "./components/section";
 @import "./components/logo";
 @import "./components/modal/modal";
 @import "./components/modal/backdrop";
 @import "./components/port_buttons.scss";
 @import "./layouts/header";
-@import "./layouts/section";
 @import "./layouts/project_section.scss";
 @import "./layouts/section_hero.scss";
 @import "./layouts/section_skills.scss";
